# cpp4

./: CMakeLists.txt
new_implementation/: CMakeLists.txt  main.cpp  message.cpp  message.h  message_broker.cpp  message_broker.h  message_reader.cpp  message_reader.h  timestamp.cpp  timestamp.h
old_implementation/: message_api.c
